<resources>
    <string name="app_name">SerialPortTest</string>
    <string name="serial_port">串口号:</string>
    <string name="open_port">打开串口</string>
    <string name="close_port">关闭串口</string>
    <string name="clear_Screen">清屏</string>
    <string name="error_configuration">请先配置串口参数.</string>
    <string name="hint_place_open_port">请先打开串口.</string>
    <string name="error_security">没有串口读写权限.</string>
    <string name="error_unknown">一个未知的原因串口不能打开.</string>
    <string name="hint_open_port_success">打开串口成功.</string>
    <string name="hint_open_port_fail">打开串口失败.</string>
    <string name="hint_close_port">关闭串口.</string>
    <string name="open_data_monitor">open data monitor</string>
    <string name="close_data_monitor">close data monitor</string>
    <string name="red_twinkle">红灯闪烁</string>
    <string name="green_twinkle">绿灯闪烁</string>
    <string name="read_agreement">读通信协议</string>
    <string name="voice_buzzer">蜂鸣器响一声</string>
    <string name="led_open">呼吸灯开</string>
    <string name="led_close">呼吸灯关</string>
    <string name="read_device">读取设备类型和编号</string>
    <string name="communication_03">修改通信协议03</string>
    <string name="NFC_0">NFC读卡次数设置成0</string>
    <string name="encoding">编码格式：</string>
    <string name="baud_rate">波特率：</string>

    <string name="resest_finger">复位指纹模块</string>

    <string name="red_close">红灯关</string>
    <string name="red_open">红灯开</string>
    <string name="green_close">绿灯关</string>
    <string name="green_open">绿灯开</string>
    <string name="led_set_time">设置呼吸灯时间</string>
</resources>
