<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yy.serialporttest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="串口号："
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPort"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="波特率："
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnBaudRate"
            android:text="19200"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="编码格式："
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCoding"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOpenPort"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:text="@string/open_port"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/clear_Screen"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_red_twinkle"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/red_twinkle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_green_twinkle"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/green_twinkle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_voice_buzzer"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/voice_buzzer"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_communication_03"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/communication_03"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_led_open"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/led_open"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_led_close"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/led_close"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_read_device"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/read_device"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_read_agreement"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/read_agreement"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_NFC_0"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/NFC_0"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvReceivedData"
            android:gravity="center"
            />
    </ScrollView>
</LinearLayout>
